--- a/pom.xml
+++ b/pom.xml
@@ -4,9 +4,9 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.example</groupId>
-    <artifactId>crawler_test</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <groupId>org.lukma99</groupId>
+    <artifactId>bitpanda-withdrawal-fee-fetcher</artifactId>
+    <version>v0.2</version>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
